Actually Changed Message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cleaning Crew</string>
+    <string name="hello_cleaning_crew">Hello Cleaning Crew!</string>
 </resources>
