Added some JavaDoc comments and cleaned up a bit of code. Will do more later tonight

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cleaning Crew</string>
+    <string name="connection_error">Failed to connect to service…</string>
 </resources>
